# py_web_HW13

./: .env_example  .example.env  README.md  docker-compose.yml  main.py  notes.txt  pyproject.toml
migrations/: env.py
migrations/versions/: 1be6d68ff2ec_add_user.py  1d0496f1f5d3_add_confirmed_column_of_user.py  52da58037552_init.py  678a407a3bd6_upd_user_model.py  8a232dde0a5a_init.py  91eb468fb072_add_user_in_contact.py  af41bd8a703d_user_confirmed.py  fad02ee8d6e0_add_role_of_user.py
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16398  16402  16403  16411  16412  16414  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  (+4 more)
postgres-data/global/: 1262  2671  pg_control
postgres-data/pg_stat/: global.stat
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py  seeds.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
